css/style.css
* {
    font-family: "Noto Sans KR", sans-serif;
}

html {
}

.flex-wrap-column {
    display: flex;
    flex-direction: column;
}

.flex-wrap-row {
    display: flex;
    width: 100%;
    height: 100%;
}

.flex-wrap-row-importent {
    flex-direction: row;
    width: 100%;
}

main {
    overflow: auto;
    width: 100%;
    justify-content: center;
    align-items: center;
}

header {
    display: flex;
    position: fixed;
    width: 100%;
    background-color: rgba(255, 255, 255, 0);
    justify-content: center;
    align-items: center;
    top: 0;
    padding-top: 1rem;
    z-index: 5;
}

header a {
    color: #f2f2f2;
    padding: 1rem;
    margin: 0 0.5rem;
    text-decoration: none;
    font-size: 1rem;
    transition: transform 250ms;
}

header a:hover {
    transform: scale(1.2);
}

header a.active {
    transform: none;
    font-weight: bolder;
    background-color: rgba(255, 255, 255, 0.3);
    border-radius: 10px;
    font-size: 1rem;
    color: black;
}

.section {
    width: 100%;
    height: 100vh;
    position: relative;
    color: white;
}

.section-title {
    cursor: default;
    display: flex;
    width: 40%;
    font-size: 2.5rem;
    justify-content: center;
    align-items: center;
    z-index: 3;
}

.section-content {
    display: flex;
    width: 60%;
    font-size: 0.8rem;
    justify-content: center;
    align-items: center;
}

.section-one {
    background: linear-gradient(
        to bottom,
        rgb(0, 0, 0),
        rgb(10, 10, 10)
    );
    position: relative;
    padding: 0px;
}

.section-one-img {
    position: relative;
    height: inherit;
    background-position: center;
    background-image: url(../images/profile_2.jpg);
    background-repeat: no-repeat;
    background-size: contain;
}

.wrap-profile-text {
    position: relative;
    top: 45%;
    left: 50%;
    transform: translate(-50%, -60%);
    text-align: center;
    color: white;
}

.text-init {
    font-size: 3rem;
    padding-bottom: 3rem;
}

.text-name {
    font-size: 2rem;
    padding: 2rem 0 1rem 0;
    text-shadow: 8px 8px 8px black;
}

.text-welcome {
    font-size: 1rem;
    padding-top: 3rem;
}

.section-two {
    background: linear-gradient(
        to bottom,
        rgb(10, 10, 10),
        rgb(20, 20, 20)
    );
}
.section-who:before {
    position: absolute;
    content: "";
    width: 100%;
    height: 130%;
    top: 0%;
    background: linear-gradient(
        to bottom,
        rgb(10, 10, 10),
        rgb(18, 18, 18)
    );
    border-bottom-right-radius: 50px;
    z-index: -1;
}

.section-three {
    background: linear-gradient(
        to bottom,
        rgb(20, 20, 20),
        rgb(30, 30, 30)
    );
}

.label {
    padding: 30px 0 5px 0;
}

.textdeco-none {
    cursor: default;
    color: inherit;
    text-decoration: none;
}

.about-branch {
    position: absolute;
    display: flex;
    width: 100%;
    height: 30%;
    justify-content: center;
    align-items: flex-end;
}

.about-branch label {
    margin: 0 1rem;
    border-radius: 5px;
    padding: 0.5rem;
    cursor: pointer;
    transition: all 0.5s;
}

.about-branch label:hover {
    transform: scale(1.2);
}

.about-branch label.active {
    transform: scale(1.2);
    background-color: rgb(18, 18, 18);
}

input[name$="about-nav"] {
    display: none;
}

.section-about {
    justify-content: start;
}

.section-about:before {
    position: absolute;
    content: "";
    width: 100%;
    height: 65%;
    top: 35%;
    background: linear-gradient(
        to bottom,
        rgb(18, 18, 18),
        rgb(30, 30, 30)
    );
    border-top-left-radius: 50px;
}

.about-content-group {
    position: relative;
    width: 100%;
    top: 45%;
}

.about-content-group .about-content {
    display: flex;
    flex-direction: column;
    width: 100%;
    height: 100%;
    z-index: 1;
    justify-content: start;
    align-items: flex-start;
}
.about-content-group .about-content p,
.about-content-group .about-content form {
    margin-left: 10%;
}
.about-content-group .active {
    transform: none;
}

.about-sub-title {
    margin: 0 0 5% 0;
    position: relative;
    font-size: 1.2rem;
}

.mail-link {
    background: none;
    border: none;
    padding: 0px 0 0 8px;
    color: inherit;
    font-size: inherit;
    font-weight: inherit;
    width: fit-content;
    line-height: 0px;
    cursor: pointer;
    height: 20px;
}

.section-four {
    background: linear-gradient(
        to bottom,
        rgb(30, 30, 30),
        rgb(40, 40, 40)
    );
}
.section-contact:before {
    position: absolute;
    content: "";
    width: 100%;
    height: 100%;
    background: linear-gradient(
        to bottom,
        rgb(30, 30, 30),
        rgb(18, 18, 18)
    );
    border-bottom-right-radius: 50px;
    z-index: -1;
}

.contact-wrap {
    position: relative;
    width: max-content;
    text-align: center;
    color: white;
}

.form-elements {
    padding-top: 5rem;
    width: 60%;
}

.pure-group {
    text-align: start;
    position: relative;
    margin: 5px 0;
}

.pure-group > input {
    position: relative;
    margin: 10px 0;
    background-color: rgb(20, 20, 20);
    border: 1px solid rgb(100, 100, 100);
    border-radius: 5px;
    width: 100%;
    height: 20px;
    padding: 10px;
    color: white;
}

.pure-group > textarea {
    margin: 10px 0;
    background-color: rgb(20, 20, 20);
    border: 1px solid rgb(100, 100, 100);
    border-radius: 5px;
    width: 100%;
    height: 160px;
    padding: 10px;
    resize: vertical;
    font-size: 18px;
    color: white;
}

.pure-group > textarea::placeholder {
    font-size: 18px;
}

.btn-contact {
    position: relative;
    margin: 0 auto;
    transition: transform 250ms;
    border: none;
    width: 120px;
    height: 50px;
    line-height: 50px;
    cursor: pointer;
    background: none;
    color: white;
    font-size: 24px;
    background-color: rgb(50, 50, 50);
    border-radius: 10px;
}

.btn-contact:hover {
    transform: scale(1.1);
    background-color: rgb(80, 80, 80);
}

#name,
#email {
}

.honeypot-field {
    display: none;
}

.thankyou_message {
    position: relative;
    font-size: 30px;
    text-align: center;
}

.thankyou_message > p {
    margin: 40px 0 40px 0;
}

footer {
    display: flex;
    position: relative;
    width: 100%;
    height: 300px;
    background: linear-gradient(
        to bottom,
        rgb(40, 40, 40),
        rgb(51, 51, 51)
    );

    justify-content: center;
    align-items: center;
}
.typewriter {
    text-decoration: none;
    width: 90%;
    max-width: fit-content;
    overflow: hidden;
    border-right: 0.1rem solid #ffffff00;
    white-space: nowrap;
    margin: 0 auto;
    letter-spacing: 0.2rem;
    color: #ffffff00;
}

.typewriter.first {
    animation: set-color 0.1s infinite,
        typing 2.5s steps(30, end), blink-caret 2.5s;
}

.typewriter.second {
    animation: set-color 2.5s infinite,
        typing 2.5s steps(30, end), blink-caret 2.5s;
    animation-delay: 2.5s;
}

.typewriter.third {
    animation: set-color 5s infinite,
        typing 2.5s steps(30, end),
        blink-caret-infinite 1s step-end infinite;
    animation-delay: 5s;
}
@keyframes typing {
    from {
        width: 0;
    }
    to {
        width: 390px;
    }
}
@keyframes blink-caret {
    from,
    to {
        border-color: #ffffff;
    }
    50% {
        border-color: #ffffff;
    }
}

@keyframes blink-caret-infinite {
    from,
    to {
        border-color: transparent;
    }
    50% {
        border-color: #ffffff;
    }
}

@keyframes set-color {
    from {
        color: #ffffff;
    }
    to {
        color: #ffffff;
    }
}

